# web_test

./: Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py
app/csv/: sample_log.csv
